--- a/client/src/App.module.sass
+++ b/client/src/App.module.sass
@@ -1,7 +1,7 @@
 .container
-  max-width: 1100px
-  margin: auto
-  overflow: hidden
-  padding: 0 2rem
-  margin-top: 6rem
-  margin-bottom: 3rem
+  // max-width: 1100px
+  // margin: auto
+  // overflow: hidden
+  // padding: 0 2rem
+  // margin-top: 6rem
+  // margin-bottom: 3rem
