add change avatar setting

--- a/client/templates/saga.js.hbs
+++ b/client/templates/saga.js.hbs
@@ -12,7 +12,7 @@ import withLoading from '../../utils/redux-utils/withLoading.saga'
 
 
 
-export default function* userSaga() {
+export default function* {{camelCase name}}Saga() {
   yield takeLatest({type: 'action1'}, function* () {})
 	yield takeLatest({type: 'action2'}, function* () {})
 	yield takeLatest({type: 'action3'}, function* () {})
